fix spacing and brightness

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ strong {
   display: block;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.65);
+  background-color: rgba(0, 0, 0, 0.45);
 }
 .container.light::after {
   content: "";
